Fix CoOccurrenceAnalysis